# LocoHub

./: .gitignore  404_FIXES_IMPLEMENTATION_SUMMARY.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DatasetDetails.md  GGPLOT2_VISUALIZATION_IMPLEMENTATION_SUMMARY.md  GOVERNMENT_AUDIT_COMPLIANCE_REPORT.md  NAVIGATION_REDESIGN_SUMMARY.md  PM_snapshot.md  PROGRESS_TRACKING.md  PROJECT_MANAGEMENT.md  PROJECT_MANAGEMENT_SYSTEM_GUIDE.md  PR_CHANGES_SUMMARY.md  README.md  SUPPORT_LIBRARIES_COVERAGE_COMPLIANCE_REPORT.md  VALIDATION_COMMAND_REFERENCE.md  WAVE4_DEVOPS_IMPLEMENTATION_SUMMARY.md  WAVE4_IMPLEMENTATION_SUMMARY.md  anthropometric_scaling_framework.md  biomechanical_constraints_requirements.md  conversion_generate_phase_dataset.py  debug_kinetic.py  debug_kinetic_vars.py  debug_test.py  debug_test2.py  debug_test3.py  docker-compose.yml  fda_demo.py  mkdocs.yml  parallel_work_waves.md  performance_analysis_20250619_004112.json  performance_analysis_20250619_004118.json  performance_analysis_20250619_004145.json  performance_analysis_20250619_112733.json  performance_analysis_20250619_113922.json  pyproject.toml  refresh_validation_gifs.py  requirements-container.txt  scratchpad.md  (+14 more)
.claude/: settings.json
AddBiomechanics/: add_phase_info.ipynb  add_phase_info.py  add_task_info.py  addbpqcarter2023tasknaming.ipynb  b3d_to_parquet.py  convert_addbiomechanics_to_parquet.py  extract_biomechanics_dataset.sh  processing_Gtech_2021_timeparquet_to_phase.py  requirements.txt  verify_add_biomechanics.ipynb  verify_addbiomechanics.ipynb  zjytestfield.ipynb
Gtech_2023/: readme.md  (+12 more)
(+1258 files in other folders)
